Bug 150639 - Master Slides sidebar opens with zero width
Summary: Master Slides sidebar opens with zero width
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Mihai Vasiliu
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 149732 152076 153069 153135 157473 (view as bug list)
Depends on:
Blocks: Sidebar-Master-Slides
  Show dependency treegraph
 
Reported: 2022-08-28 03:10 UTC by Aron Budea
Modified: 2023-10-09 12:51 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2022-08-28 03:10:50 UTC
Start a new presentation, and open the Master Slides sidebar.

=> It doesn't show. It can be manually extended, though.

Other sidebar decks open fine.

This is a regression from the following commit, bibisected to its 7.4 backport using the Linux bibisect repo. Adding CC: to xuenhua.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=0ec2b93c28093c80572c43f7be261630bd85f232
author		xuenhua <xuenhua2008@sina.com>	2022-06-01 15:29:49 +0800
committer	Caolán McNamara <caolanm@redhat.com>	2022-06-17 20:52:05 +0200

tdf#149431 Fix the sidebar's width
Comment 1 stragu 2022-09-12 15:40:23 UTC
Reproduced in:

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 24087697d5cf78aac346d4dcea0596373e15a95c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

but not:

Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Aron Budea 2022-09-13 02:42:33 UTC
*** Bug 149732 has been marked as a duplicate of this bug. ***
Comment 3 stragu 2022-11-17 00:53:58 UTC
*** Bug 152076 has been marked as a duplicate of this bug. ***
Comment 4 stragu 2023-01-17 15:08:32 UTC
*** Bug 153069 has been marked as a duplicate of this bug. ***
Comment 5 stragu 2023-01-21 18:45:18 UTC
*** Bug 153135 has been marked as a duplicate of this bug. ***
Comment 6 stragu 2023-03-23 22:56:30 UTC
Caolán, given that Enhua Xu isn't that active anymore, and that you reviewed the commit, any chance you could have a look at this?
Comment 7 Kira Tubo 2023-10-05 05:23:26 UTC
*** Bug 157473 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2023-10-06 08:43:37 UTC
Mihai Vasiliu committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e6db2a3360d7ee89cae14cbcfe386e7425daf98

tdf#150639 Fix sidebar width too narrow

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-10-08 00:17:22 UTC
Mihai Vasiliu committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a37f77b8c297a28e6bb0072eb882f62a920aecf5

tdf#150639 Fix sidebar width too narrow

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 stragu 2023-10-09 12:17:16 UTC
Seems to have fixed it for me in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a02f4ed071f15908624fb1cafcf6dbb72b00a1b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Mihai! Please mark as "resolved - fixed" if you don't have any follow-up commits.