tdf#150639 Fix sidebar width too narrow

The mnWidthOnSplitterButtonDown is initialized to 0 at program start.
This makes every call to take the else case until the user manually changes the
width, but some decks such as Master Slides have the mnMinimalWidth too low which
makes them too narrow for the content they should display to the user.

Change-Id: I8fc4924f777770dedbdc8d162ceceb620ff80e59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157596
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 6e6db2a3360d7ee89cae14cbcfe386e7425daf98)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157621
Reviewed-by: Mihai Vasiliu <mihai.vasiliu.93@gmail.com>
Reviewed-by: Patrick Luby <plubius@neooffice.org>